170947679-ft(notification): send notification to the manager when user modifies request - let manager receive notification when requester makes changes to the request. [Finishes #170947679]

--- a/env.example
+++ b/env.example
@@ -16,3 +16,7 @@ FCBK_CALLBACK_URL = 'https://your-heroku-app-on-facebook'
 HOST_NAME='your-heroku-staging-app'
 LOCAL_HOST='http://localhost:port'
 
+MAIL_SERVICE='Gmail'
+MAIL_HOST='smtp.gmail.com'
+MAIL_USER='Barefoot email'
+MAIL_PASS='Barefoot password'
