--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mock-req": "^0.2.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.3",
     "nodemon": "^2.0.2",
     "npm": "^6.13.7",
     "nyc": "^15.0.0",
@@ -74,6 +75,8 @@
     "lodash": "^4.17.15",
     "mocha": "^7.0.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "mock-req-res": "^1.1.4",
+    "node-env-run": "^3.0.2",
     "prettier": "^1.19.1",
     "sinon": "^9.0.0"
   },
